--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Benjamin Graetz - Winter Wonderland</title>
+    <title>Benjamin Graetzd</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Snowburst+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -33,8 +33,18 @@
         </ul>
     </section>
 
+    <section>
+        <h2>Festive Cheer</h2>
+        <img src="tree.png" alt="Christmas Tree" class="tree">
+    </section>
+
     <footer>
         <p>Made with ❤️ and snowflakes.</p>
     </footer>
+
+    <audio autoplay loop volume="0.5">
+        <source src="music.mp3" type="audio/mpeg">
+        Your browser does not support the audio tag.
+    </audio>
 </body>
 </html>
