fix in html now

--- a/CS2.HTML
+++ b/CS2.HTML
@@ -1,8 +1,4 @@
----
-layout: default
-title: "Cities Skylines 2"
-permalink: /cs2
----
+<html>
 <head>
   <title>Cities: Skylines II</title>
   <link rel="icon" href="/images/tree.png" type="image/x-icon">
