--- a/TECH.HTML
+++ b/TECH.HTML
@@ -1,8 +1,4 @@
----
-layout: default
-title: "Tech Today"
-permalink: /tech
----
+<html>
 <head>
   <title>Tech Today</title>
   <link rel="icon" href="/images/tree.png" type="image/x-icon">
@@ -33,3 +29,4 @@ permalink: /tech
     <button>Home</button>
     </a>
 </body>
+</html>
