--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -1,9 +1,4 @@
----
-layout: default
-title: "Benjamin Graetz"
-permalink: /
----
-
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -44,10 +39,11 @@ permalink: /
         <source src="music.mp3" type="audio/mpeg">
         Your browser does not support the audio tag.
     </audio>
-    <a href="https://bennygaming635.github.io/cs2">
+    <a href="https://bennygaming635.github.io/CS2.html">
     <button>CS2</button>
     </a>
-    <a href="https://bennygaming635.github.io/tech">
+    <a href="https://bennygaming635.github.io/TECH.html">
     <button>Tech</button>
     </a>
 </body>
+</html>
