--- a/index.html
+++ b/index.html
@@ -1,49 +1,68 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Benjamin Graetz</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Snowburst+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="/images/tree.png" type="image/x-icon">
 </head>
 <body>
+    <!-- Snowflakes -->
     <div class="snowflake" style="left: 10%;">❄</div>
     <div class="snowflake" style="left: 30%;">❅</div>
     <div class="snowflake" style="left: 50%;">❆</div>
     <div class="snowflake" style="left: 70%;">❄</div>
     <div class="snowflake" style="left: 90%;">❅</div>
+
+    <!-- Header -->
     <header>
         <h1>Benjamin Graetz</h1>
     </header>
+
+    <!-- About Section -->
     <section>
         <h2>About Me</h2>
-        <p>Hi! I'm Benjamin Graetz. I love Tech, gaming, and exploring system administration!</p>
+        <p>Hi! I'm Benjamin Graetz. I love tech, gaming, and exploring system administration!</p>
     </section>
+
+    <!-- Interests Section -->
     <section>
         <h2>Interests</h2>
         <ul>
-            <li>City Skylines 2 - Building cities.</li>
-            <li>Gaming - Mainly management games.</li>
-            <li>Tech - I know a thing or two!.</li>
-            <li>SysAdmin - Managing systems and keeping things running smoothly.</li>
+            <li>City Skylines 2 – Building cities.</li>
+            <li>Gaming – Mainly management games.</li>
+            <li>Tech – I know a thing or two!</li>
+            <li>SysAdmin – Managing systems and keeping things running smoothly.</li>
         </ul>
     </section>
+
+    <!-- Festive Cheer -->
     <section>
         <h2>Festive Cheer</h2>
         <img src="images/tree.png" alt="Christmas Tree" class="tree">
     </section>
+
+    <!-- Buttons -->
+    <section>
+        <a href="https://bennygaming635.github.io/CS2.html">
+            <button type="button">CS2</button>
+        </a>
+        <a href="https://bennygaming635.github.io/TECH.html">
+            <button type="button">Tech</button>
+        </a>
+    </section>
+
+    <!-- Footer -->
     <footer>
         <p>Made with ❤️ and snowflakes.</p>
     </footer>
-    <audio autoplay loop volume="0.5">
+
+    <!-- Background Music -->
+    <audio autoplay loop>
         <source src="music.mp3" type="audio/mpeg">
-        Your browser does not support the audio tag.
+        Your browser does not support the audio element.
     </audio>
-    <a href="https://bennygaming635.github.io/CS2.html">
-    <button>CS2</button>
-    </a>
-    <a href="https://bennygaming635.github.io/TECH.html">
-    <button>Tech</button>
-    </a>
 </body>
 </html>
