--- a/CS2.HTML
+++ b/CS2.HTML
@@ -1,12 +1,51 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cities: Skylines II</title>
-  <link rel="icon" href="/images/tree.png" type="image/x-icon">
+  <link rel="icon" href="/images/tree.png" type="image/x-icon" />
   <style>
-    body { font-family: Arial, sans-serif; background: #e0f7fa; color: #004d40; margin: 0; padding: 20px; }
-    header { background: #00796b; color: white; padding: 20px; text-align: center; }
-    section { margin-top: 20px; }
-    img { width: 100%; max-width: 600px; border-radius: 8px; }
+    body {
+      font-family: Arial, sans-serif;
+      background: #e0f7fa;
+      color: #004d40;
+      margin: 0;
+      padding: 20px;
+    }
+    header {
+      background: #00796b;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+    section {
+      margin-top: 20px;
+    }
+    img {
+      width: 100%;
+      max-width: 600px;
+      border-radius: 8px;
+      display: block;
+      margin: 20px auto;
+    }
+    button {
+      background-color: #00796b;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      font-size: 1rem;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+    button:hover {
+      background-color: #004d40;
+    }
+    .center {
+      text-align: center;
+      margin-top: 30px;
+    }
   </style>
 </head>
 <body>
@@ -14,11 +53,20 @@
     <h1>Cities: Skylines II</h1>
     <p>The ultimate city-building simulation game</p>
   </header>
+
   <section>
     <h2>About the Game</h2>
-    <p>Cities: Skylines II is the sequel to the award-winning city-builder. Plan, build, and manage a complex city in stunning detail, using realistic transportation, infrastructure, and dynamic weather systems.</p>
-    <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/949230/header.jpg" alt="Cities Skylines II Screenshot">
+    <p>
+      <strong>Cities: Skylines II</strong> is the sequel to the award-winning city-builder.
+      Plan, build, and manage a complex city in stunning detail using realistic transportation,
+      infrastructure, and dynamic weather systems.
+    </p>
+    <img
+      src="https://cdn.cloudflare.steamstatic.com/steam/apps/949230/header.jpg"
+      alt="Cities: Skylines II screenshot"
+    />
   </section>
+
   <section>
     <h2>New Features</h2>
     <ul>
@@ -28,8 +76,11 @@
       <li>Dynamic citizens with evolving lives</li>
     </ul>
   </section>
+
+  <div class="center">
     <a href="https://bennygaming635.github.io/">
-    <button>Home</button>
+      <button type="button">Home</button>
     </a>
+  </div>
 </body>
 </html>
